// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input and has margin property  renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has margin property  renders correctly 2`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mb property  renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-bottom: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mb property  renders correctly 2`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-bottom: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has ml property  renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-left: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has ml property  renders correctly 2`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-left: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mr property  renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-right: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mr property  renders correctly 2`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-right: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mt property  renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-top: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input and has mt property  renders correctly 2`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
  margin-top: 16px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;

exports[`Input renders correctly 1`] = `
.c0.rovna-ui-input {
  font-size: 14px;
  line-height: 24px;
  text-overflow: ellipsis;
}

.c0.rovna-ui-input-affix-wrapper > input.rovna-ui-input {
  text-overflow: ellipsis;
  font-size: 14px;
  line-height: 24px;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-suffix {
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-prefix {
  margin-inline-end: 8px;
  color: #686E78FF;
}

.c0.rovna-ui-input-affix-wrapper .rovna-ui-input-clear-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0.rovna-ui-input-affix-wrapper .anticon {
  font-size: 16px;
}

.c0.rovna-ui-input,
.c0.rovna-ui-input-affix-wrapper {
  height: 32px;
}

<input
  className="rovna-ui-input css-dev-only-do-not-override-u64svk c0 css-dev-only-do-not-override-u64svk"
  data-testid="rovna-ui-input"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  style={{}}
  title=""
  type="text"
  value=""
/>
`;
